chore(pom): adiciona novas dependências